tdf#151752 Fix crash when selecting unprotected cells and copy/pasting

The problem is that the code attemps to index into maTabs when looping
through clipboard ranges, but maTabs.size() can be 0 at that point
thus resulting in a crash.  The fix is to first check if maTabs.size()
is greater than 0 before doing the looping.

Change-Id: Ib2fc4c9f847f87f44a68ad6d73c2745d79b5caa5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162032
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit 59927dedc31eb5d51b417a02ae927eb578b90bd6)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162090
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit a381ac7b0fa95ce340bd1b384c946fbd19d87393)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162095
Reviewed-by: Matt K <mattkse@gmail.com>
Reviewed-by: Ilmari Lauhakangas <ilmari.lauhakangas@libreoffice.org>
Tested-by: Michael Weghorn <m.weghorn@posteo.de>
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>