sc/source/core/data/document.cxx
@@ -3254,12 +3254,16 @@ bool ScDocument::HasClipFilteredRows()
     if ( rClipRanges.empty() )
         return false;
 
-    for ( size_t i = 0, n = rClipRanges.size(); i < n; ++i )
+    if (maTabs.size() > 0)
     {
-        ScRange & rRange = rClipRanges[ i ];
-        bool bAnswer = maTabs[nCountTab]->HasFilteredRows(rRange.aStart.Row(), rRange.aEnd.Row());
-        if (bAnswer)
-            return true;
+        for (size_t i = 0, n = rClipRanges.size(); i < n; ++i)
+        {
+            ScRange& rRange = rClipRanges[i];
+            bool bAnswer
+                = maTabs[nCountTab]->HasFilteredRows(rRange.aStart.Row(), rRange.aEnd.Row());
+            if (bAnswer)
+                return true;
+        }
     }
     return false;
 }
